# libmesode

./: .gitignore  ChangeLog  Makefile.am  README.markdown  build-android.sh  configure.ac  libmesode.pc.in  mesode.h
examples/: README.md  active.c  basic.c  bot.c  component.c  roster.c  uuid.c  vcard.c
jni/: Android.mk
src/: auth.c  common.h  conn.c  crypto.c  ctx.c  event.c  handler.c  hash.c  hash.h  jid.c  ostypes.h  parser.h  parser_expat.c  rand.h  resolver.c  resolver.h  sasl.c  sasl.h  scram.h  sha1.h  snprintf.h  sock.c  sock.h  stanza.c  thread.c  thread.h  tls.h  tls_dummy.c  tls_openssl.c  util.c  util.h  uuid.c
tests/: check_parser.c  test.h  test_base64.c  test_ctx.c  test_hash.c  test_jid.c  test_resolver.c  test_sasl.c  test_sock.c  test_string.c
